--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "method-override": "^2.3.10",
     "mongoose": "^5.0.16",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0"
+    "passport-google-oauth20": "^1.0.0",
+    "path": "^0.12.7"
   }
 }
