--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "method-override": "^2.3.10",
     "moment": "^2.22.1",
     "mongoose": "^5.0.16",
+    "order-id": "^1.1.0",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "passport-local": "^1.0.0",
